Use Java 21 on CI